[build-system]
requires = ["setuptools>61", "cython>=3.1.0a1,<4"]

[project]
name = "deepcodec"
description = "Pythonic bindings for FFmpeg's libraries."
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Benjamin Schneider", email = "Benjamin.Schneider@uwaterloo.ca"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]
dynamic = ["version"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "deepcodec.about.__version__"}

[project.scripts]
"pyav" = "deepcodec.__main__:main"

[tool.isort]
profile = "black"
known_first_party = ["deepcodec"]
skip = ["deepcodec/__init__.py"]
